# ProjectFlow

./: .gitignore  CLAUDE.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts  设计文档.md
.claude/: settings.local.json
.github/workflows/: release.yml
.planning/: .continue-here.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: knowledge-base.md  llm-chat-no-api-key.md
.planning/debug/resolved/: card-theme-not-changing.md  minimax-save-dialog-not-closing.md
.planning/phases/01-dark-ui-optimization/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-DESIGN-SPEC.md  01-RESEARCH.md  01-UI-SPEC.md  01-VERIFICATION.md
.planning/research/: STACK.md
.trae/documents/: llm_websocket_streaming_plan.md  tauri_sidecar_llm_plan.md
coverage/: coverage-final.json  index.html
coverage/lib/: api.ts.html  index.html
coverage/stores/: documentStore.ts.html  index.html  projectStore.ts.html  uiStore.ts.html
docs/: DESIGN.md  TEST_CASES.md  TEST_RESULTS.md  tauri-sidecar-tutorial.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: anthropic_client.py  api.py  build.py  build.spec  config.py  main.py  openai_client.py  requirements.txt
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: llm.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/llm/: litellm.rs  llm.rs  mod.rs  openai.rs  prompts.rs  storage.rs
src-tauri/src/models/: mod.rs
src/lib/: api.test.ts  api.ts
src/stores/: documentStore.ts  llmStore.test.ts  llmStore.ts  projectStore.ts  uiStore.test.ts  uiStore.ts
(+84 files in other folders)
