[package]
name = "projectflow"
version = "0.1.0"
description = "ProjectFlow - Windows 项目管理工具"
authors = ["ProjectFlow Team"]
edition = "2021"

[lib]
name = "projectflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"

# LLM dependencies
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
bytes = "1"
futures-util = "0.3"
keyring = "3"
aes-gcm = "0.10"
base64 = "0.22"
llm-gateway = "0.1"
anthropic = "0.25"
